[gd_scene load_steps=9 format=3 uid="uid://j76kc87g8vc"]

[ext_resource type="Texture2D" uid="uid://dq0votarpo0pi" path="res://assets/Sprout Lands - Sprites - Basic pack/Characters/Free Cow Sprites.png" id="1_s1sjw"]
[ext_resource type="Script" path="res://character/animal/cow/cow.gd" id="1_xodfi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_symsb"]
size = Vector2(16, 8)

[sub_resource type="Animation" id="Animation_cxh77"]
resource_name = "Blink"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeCowSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_b1tp6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeCowSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_vpnnt"]
resource_name = "Stay"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeCowSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_syc0i"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FreeCowSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f81as"]
_data = {
"Blink": SubResource("Animation_cxh77"),
"RESET": SubResource("Animation_b1tp6"),
"Stay": SubResource("Animation_vpnnt"),
"Walk": SubResource("Animation_syc0i")
}

[node name="Cow" type="CharacterBody2D"]
position = Vector2(17.775, 17.015)
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_xodfi")

[node name="FreeCowSprites" type="Sprite2D" parent="."]
position = Vector2(2, -5)
texture = ExtResource("1_s1sjw")
hframes = 3
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_symsb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f81as")
}

[node name="ChangeStateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_change_state_timer_timeout"]
